# MemeBizKit

./: README.md
include/mmbkpp/app/: lmdb_based_id_mapper.hpp  lmdb_env.hpp  lmdb_group.hpp  object_factory.hpp  object_registrar.hpp  serial_port_alias.hpp  text_file.hpp  text_file_handler.hpp  text_file_monitor.hpp  translation_mapper.hpp
include/mmbkpp/chrono/: passive_timer.hpp
include/mmbkpp/container/: dkmap.hpp
include/mmbkpp/obf/hardware/: basicinfo.hpp  cpuinfo.hpp  info.hpp  meminfo.hpp  mmc.h  mmc_from_yyjson.h  mmc_into_yyjson.h  strginfo.hpp  sysinfo.hpp
include/mmbkpp/obf/os/linux/: dir.h
include/mmbkpp/obf/os/win/: exit_if_debugger_present.h
include/mmbkpp/obf/software/: is_debugger_present.h
include/mmbkpp/stream/: package_preproc.hpp
include/mmbkpp/strg/: sqlite3_hdl.hpp  sqlite3_sequence.hpp
include/mmbkpp/wrap/obfy/: instr.h
include/mmbkpp/wrap/paho_mqtt/: async_client.hpp  option.hpp
include/mmbkpp/wrap/uvw/: async.h  async_fwd.h  dns.h  dns_fwd.h  emitter.h  emitter_fwd.h  fs.h  fs_event.h  handle.h  loop.h  loop_fwd.h  pipe.h  pipe_fwd.h  stream.h  stream_fwd.h  tcp.h  tcp_fwd.h  timer.h  timer_fwd.h  udp.h  udp_fwd.h  uv_type.h
include/mmbkpp/wrap/websocketpp/: routable_server.hpp
unit_test/obf_readdir/: CMakeLists.txt  main.cpp
unit_test/sqlite3_sequence/: sqlite3_sequence.cpp  sqlite3_sequence.sln  sqlite3_sequence.vcxproj  sqlite3_sequence.vcxproj.filters
